--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
 <body onload="init(h,w);">
 <h1 id="title" style="text-align: center;"></h1>
-<div id="radar"></div>
-<div>
-<p>^ Item in dispute, additional discussion and context to be provided.</p>
-</div>
+<div id="radar" style="margin: auto"></div>
+
 </body>
 </html>
